tests/typing/errors/wrong-type/test_tptp_infer.p
% Mismatch between types
% p should be inferred of type $i -> $o

tff(error, axiom, p(12) ).

